force-app/main/default/objects/Account/fields/CI_Test_Field__c.field-meta.xml
<CustomField>
<fullName>CI_Test_Field__c</fullName>
<label>CI Test Field 6</label>
<type>Text</type>
<length>59</length>
</CustomField>