force-app/main/default/objects/Account/fields/Test_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_2__c</fullName>
    <label>Test Field 2</label>
    <length>22</length>
    <type>Text</type>
</CustomField>